--- a/style.css
+++ b/style.css
@@ -87,3 +87,15 @@
 .ex-2-square{
     transition: 3s;
 }
+
+/* Esercizio 3 */
+
+.ex-3-square:hover{
+    border-radius: 50%;
+}
+
+.ex-3-square{
+    transition: 0.5s;
+}
+
+/* Esercizio 4 */
