--- a/style.css
+++ b/style.css
@@ -131,3 +131,13 @@
 .ex-6-img:hover{
     filter: grayscale(100%);
 }
+
+/* Esercizio 7 */
+
+.ex-7-img:hover{
+    filter: sepia(65%);
+}
+
+.ex-7-img{
+    transition: 3s;
+}
