--- a/style.css
+++ b/style.css
@@ -166,3 +166,13 @@
 }
 
 /* Esercizio 10 */
+
+.ex-10-icon{
+    animation: giro 1s linear infinite;
+}
+
+@keyframes giro{
+    0%{transform: rotate(1turn);}
+}
+
+/* Esercizio 11 */
