--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@
 
 @keyframes topwhite{
     0%{left: 10%;}
-    50%{calc: 100% - 60px;}
+    50%{left: calc(100% - 60px);}
     100%{left: 10%;}
 }
 
@@ -205,6 +205,6 @@
 
 @keyframes bottomwhite{
     0%{right: 20%;}
-    50%{calc: 100% - 60px;}
+    50%{right: calc(100% - 60px);}
     100%{right: 20%;}
 }
