--- a/style.css
+++ b/style.css
@@ -212,27 +212,66 @@
 /* Esercizio 13 */
 
 .ex-13-button:hover .ex-13-top-white{
-    animation: move_top 2s linear;
+    animation: move_top 5s infinite;
 }
 
 @keyframes move_top{
     0%{
+        top: -10px;
         left: 10%;
+        
     }
-    25%{
-        left: calc(100% - 30px);
+    20%{
+        top: -10px;
+        left: 85%;
+        
     }
-    50%{
-        left: calc(100% - 30px);
-        top: 100%
+    40%{
+        top: 85%;
+        left: 85%;
     }
-    75%{
-        left: 0;
-        top: 100%;
+    60%{
+        left: -10px;
+        top: 85%;
+    }
+    80%{
+        top: -10px;
+        left: -10px;
+
     }
     100%{
+        top: -10px;
         left: 10%;
-        top: 90%;
     }
-    
+}
+
+.ex-13-button:hover .ex-13-bottom-white{
+    animation: move_bot 5s infinite;
+}
+
+@keyframes move_bot{
+    0%{
+        bottom: -10px;
+        right: 20%;
+    }
+    20%{
+        bottom: -10px;
+        right: 80%;
+    }
+    40%{
+        bottom: 85%;
+        right: 80%;
+    }
+    60%{
+        bottom: 85%;
+        right: -10px;
+    }
+    80%{
+        bottom: -10px;
+        right: -10px;
+    }
+    100%{
+        bottom: -10px;
+        right: 20%;
+    }
 }
